# projectgame

./: .gitignore  README.md
project/: CMakeLists.txt  enemy.h  game.cpp  healthbar.h  hero.h  herotest.h  main.cpp  map.h  tests.cpp
project/doctest/: CMakeLists.txt  tests_main.cpp
project/html/: annotated.html  class_health_bar-members.html  class_health_bar.html  classenemy-members.html  classenemy.html  classes.html  classhero-members.html  classhero.html  dir_52f012a18acf8ca3387b3d38d2ac72ab.html  dir_7d27b4cd9d0e4e5e0df853dabcb97f1b.html  dir_d522931ffa1371640980b621734a4381.html  dir_e087882ae071cf1b9ce437dc00c14564.html  dir_eb9911c37cf35c34f07a4291ff1a9114.html  enemy_8h.html  enemy_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  game_8cpp.html  globals.html  globals_func.html  globals_vars.html  healthbar_8h.html  healthbar_8h_source.html  hero_8h.html  hero_8h_source.html  herotest_8h.html  herotest_8h_source.html  index.html  map_8h.html  map_8h_source.html  menudata.js
project/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  classes_0.js  classes_1.js  files_0.html  files_0.js  files_1.html  files_1.js  files_2.html  files_2.js  files_3.html  files_3.js  functions_0.html  functions_0.js  functions_1.html  functions_1.js  functions_2.html  functions_2.js  functions_3.html  functions_3.js  functions_4.html  functions_4.js  (+29 more)
project/latex/: annotated.tex  class_health_bar.tex  classenemy.tex  classhero.tex  dir_52f012a18acf8ca3387b3d38d2ac72ab.tex  dir_7d27b4cd9d0e4e5e0df853dabcb97f1b.tex  dir_d522931ffa1371640980b621734a4381.tex  dir_e087882ae071cf1b9ce437dc00c14564.tex  dir_eb9911c37cf35c34f07a4291ff1a9114.tex  enemy_8h.tex  files.tex  game_8cpp.tex  healthbar_8h.tex  hero_8h.tex  herotest_8h.tex  map_8h.tex  refman.tex
